--- a/Android_Studio/app/src/main/res/values/strings.xml
+++ b/Android_Studio/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">MDM App</string>
+    <string name="app_name">Numbux</string>
+    <string name="accessibility_service_description">Focus mode blocker</string>
 </resources>
